Proper Maintainer and Uploaders fields for Debian.

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: kate
 Section: kde
 Priority: optional
-Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
+Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
+Uploaders: José Manuel Santamaría Lema <panfaust@gmail.com>
 Build-Depends: cmake,
                debhelper (>= 7.3.16),
                kde-sc-dev-latest (>= 4:4.7.1),
