--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,12 @@ Source: kate
 Section: kde
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
-Uploaders: José Manuel Santamaría Lema <panfaust@gmail.com>
+Uploaders: José Manuel Santamaría Lema <panfaust@gmail.com>,
+ Eshat Cakar <info@eshat.de>
 Build-Depends: cmake,
  debhelper (>= 7.3.16),
- kde-sc-dev-latest (>= 4:4.7.1),
- kdelibs5-dev (>= 4:4.6),
+ kde-sc-dev-latest (>= 4:4.7.2),
+ kdelibs5-dev (>= 4:4.7),
  pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.2
 Homepage: http://kate-editor.org/
