--- a/debian/control
+++ b/debian/control
@@ -118,10 +118,10 @@ Depends: ${misc:Depends}, katepart (= ${binary:Version}),
  kde-runtime-dbg (>= 4:4.6.90),
  libqt4-dbg (>= 4:4.6)
 Breaks: kdebase-dbg (<< 4:4.6.90),
- kdelibs-dbg (<< 4:4.6.90),
+ kdelibs5-dbg (<< 4:4.6.90),
  kdesdk-dbg (<< 4:4.6.90)
 Replaces: kdebase-dbg (<< 4:4.6.90),
- kdelibs-dbg (<< 4:4.6.90),
+ kdelibs5-dbg (<< 4:4.6.90),
  kdesdk-dbg (<< 4:4.6.90)
 Description: debugging symbols for Kate
  This package contains debugging files used to investigate problems with
