Enable strict shlibs for libraries.

--- a/debian/control
+++ b/debian/control
@@ -115,7 +115,7 @@ Section: debug
 Architecture: any
 Priority: extra
 Depends: ${misc:Depends}, katepart (= ${binary:Version}),
- kde-runtime-dbg (>= 4:4.6.90)
+ kde-runtime-dbg (>= 4:4.6.90), ${allLibraries}
 Breaks: kdebase-dbg (<< 4:4.6.90),
  kdelibs5-dbg (<< 4:4.6.90),
  kdesdk-dbg (<< 4:4.6.90)
