--- a/debian/control
+++ b/debian/control
@@ -11,12 +11,7 @@ Build-Depends: cmake,
  kdelibs5-dev (>= 4:4.10),
  libkactivities-dev (>= 4:4.10),
  libqjson-dev,
- libqt4-opengl-dev,
- libqtwebkit-dev,
- pkg-kde-tools (>= 0.12),
- python-kde4-dev (>=4:4.10.1),
- python-qt4-dev (>=4.9.6),
- python-sip-dev (>=4.14.3)
+ pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.3
 Homepage: http://kate-editor.org/
 Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-sc/kate.git
