--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: cmake,
  kdelibs5-dev (>= 4:4.10),
  libkactivities-dev (>= 4:4.10),
  libqjson-dev,
+ pkg-config,
  pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.3
 Homepage: http://kate-editor.org/
