--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,7 @@ Source: kate
 Section: kde
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
-Uploaders: José Manuel Santamaría Lema <panfaust@gmail.com>,
- Eshat Cakar <info@eshat.de>,
- Modestas Vainius <modax@debian.org>,
+Uploaders: Modestas Vainius <modax@debian.org>,
  Sune Vuorela <sune@debian.org>
 Build-Depends: cmake,
  debhelper (>= 7.3.16),
