--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Build-Depends: cmake,
  pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.4
 Homepage: http://kate-editor.org/
-Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-sc/kate.git
-Vcs-Git: git://git.debian.org/pkg-kde/kde-sc/kate.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kate.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kate.git
 
 Package: kate
 Section: editors
