--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: kde
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Modestas Vainius <modax@debian.org>,
- Sune Vuorela <sune@debian.org>
+           Sune Vuorela <sune@debian.org>,
+           Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake,
  debhelper (>= 9),
  kde-sc-dev-latest (>= 4:4.10.1),
