--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends: cmake,
  pkg-config,
  pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.5
+XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kate.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kate.git
