--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,13 @@ Build-Depends: cmake,
                libkactivities-dev (>= 4:4.11),
                libqjson-dev,
                pkg-config,
-               pkg-kde-tools (>= 0.12)
+               pkg-kde-tools (>= 0.12),
+               libpython2.7-dev,
+               python-sip-dev,
+               python-qt4-dev,
+               python-kde4-dev (>= 4:4.9.80),
+               libqt4-opengl-dev,
+               libqtwebkit-dev
 Standards-Version: 3.9.5
 XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
