--- a/debian/rules
+++ b/debian/rules
@@ -10,5 +10,12 @@ include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
 override_dh_strip:
 	$(overridden_command) --dbg-package=kate-dbg
 
-override_dh_install:
+override_dh_auto_install:
 	$(overridden_command)
+	# provided by kate-syntax-go -- #628161
+	rm -f debian/tmp/usr/share/kde4/apps/katepart/syntax/go.xml
+	# provided by nescc -- #716942
+	rm -f debian/tmp/usr/share/kde4/apps/katepart/syntax/nesc.xml
+	# these would belong to kate-dev
+	rm -rf debian/tmp/usr/include
+	find debian/tmp/usr/lib -maxdepth 1 -name '*.so' -type l -delete
