--- a/debian/control
+++ b/debian/control
@@ -61,8 +61,8 @@ Description: embeddable text editor component
 Package: kate-data
 Architecture: all
 Depends: ${misc:Depends}
-Breaks: kate (<< 4:4.6.90), kdelibs5-data (<< 4:4.6.90)
-Replaces: kate (<< 4:4.6.90), kdelibs5-data (<< 4:4.6.90)
+Breaks: kate (<< 4:4.14.2-2~), kdelibs5-data (<< 4:4.6.90)
+Replaces: kate (<< 4:4.14.2-2~), kdelibs5-data (<< 4:4.6.90)
 Description: shared data files for Kate text editor
  This package contains the architecture-independent shared data files needed
  for Kate editor
