--- a/debian/rules
+++ b/debian/rules
@@ -5,10 +5,18 @@ libpkgs_addsubst_allLibraries = kate-dbg
 libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
 include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
 
-override_dh_auto_configure:
-	$(overridden_command) -- -DKDE4_BUILD_TESTS=false
-
 .PHONY: override_dh_auto_test
+
+override_dh_auto_configure:
+	$(overridden_command) -- -DPYTHON_LIBRARY=/usr/lib/$(DEB_HOST_MULTIARCH)/libpython2.7.so.1
+
+#hack for 4.13.97 which fails on first build then succeeds, issue in addons/kate/pate/sip/
+override_dh_auto_build:
+	-$(overridden_command)
+	$(overridden_command)
+
+override_dh_strip:
+	$(overridden_command) --dbg-package=kate-dbg
 
 override_dh_auto_install:
 	$(overridden_command)
@@ -19,6 +27,3 @@ override_dh_auto_install:
 	# these would belong to kate-dev
 	rm -rf debian/tmp/usr/include
 	find debian/tmp/usr/lib -maxdepth 1 -name '*.so' -type l -delete
-
-override_dh_strip:
-	$(overridden_command) --dbg-package=kate-dbg
