--- a/debian/control
+++ b/debian/control
@@ -69,10 +69,10 @@ Description: embeddable text editor component
 Package: kate-data
 Architecture: all
 Depends: ${misc:Depends}
-Breaks: kate (<< 4:4.6.90),
+Breaks: kate (<< 4:4.14.3-0ubuntu2~),
         katepart (<< 4:4.14.3),
         kdelibs5-data (<< 4:4.6.90)
-Replaces: kate (<< 4:4.6.90),
+Replaces: kate (<< 4:4.14.3-0ubuntu2~),
           katepart (<< 4:4.14.3),
           kdelibs5-data (<< 4:4.6.90)
 Description: shared data files for Kate text editor
