remove another file from katepart and bump the breaks/replaces for kata-data

--- a/debian/control
+++ b/debian/control
@@ -70,10 +70,10 @@ Package: kate-data
 Architecture: all
 Depends: ${misc:Depends}
 Breaks: kate (<< 4:4.14.3-0ubuntu2~),
-        katepart (<< 4:4.14.3),
+        katepart (<< 4:4.14.3-0ubuntu2~),
         kdelibs5-data (<< 4:4.6.90)
 Replaces: kate (<< 4:4.14.3-0ubuntu2~),
-          katepart (<< 4:4.14.3),
+          katepart (<< 4:4.14.3-0ubuntu2~),
           kdelibs5-data (<< 4:4.6.90)
 Description: shared data files for Kate text editor
  This package contains the architecture-independent shared data files needed
