fix the deps I say

--- a/debian/control
+++ b/debian/control
@@ -7,24 +7,31 @@ Uploaders: Modestas Vainius <modax@debian.org>,
            Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake,
                debhelper (>= 9),
-               extra-cmake-modules,
+               extra-cmake-modules (>= 1.3.0~),
                kdoctools-dev,
                kinit-dev,
                kio-dev,
+               libgit2-dev,
                libkf5config-dev,
+               libkf5dbusaddons-dev,
                libkf5guiaddons-dev,
                libkf5i18n-dev,
                libkf5itemmodels-dev,
                libkf5jobwidgets-dev,
+               libkf5newstuff-dev,
                libkf5notifications-dev,
+               libkf5parts-dev,
                libkf5service-dev,
                libkf5texteditor-dev,
                libkf5threadweaver-dev,
                libkf5wallet-dev,
-               libpython2.7-dev,
+               libkf5windowsystem-dev,
+               libkf5xmlgui-dev,
                pkg-config,
-               pkg-kde-tools (>= 0.12),
-               plasma-framework
+               pkg-kde-tools (>= 0.15.15ubuntu1~),
+               plasma-framework-dev,
+               qtbase5-dev,
+               qtscript5-dev
 Standards-Version: 3.9.6
 XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
