--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
 include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
 
 override_dh_auto_configure:
-	$(overridden_command) -- -DKDE4_BUILD_TESTS=false
+	$(overridden_command) -- -DPYTHON_LIBRARY=/usr/lib/$(DEB_HOST_MULTIARCH)/libpython2.7.so.1
 
 .PHONY: override_dh_auto_test
 
@@ -19,6 +19,3 @@ override_dh_auto_install:
 	# these would belong to kate-dev
 	rm -rf debian/tmp/usr/include
 	find debian/tmp/usr/lib -maxdepth 1 -name '*.so' -type l -delete
-
-override_dh_strip:
-	$(overridden_command) --dbg-package=kate-dbg
