--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/kate.git
 Package: kate
 Section: editors
 Architecture: any
-Depends: kate-data (>= ${source:Version}),
+Depends: kate5-data (>= ${source:Version}),
          ktexteditor-katepart,
          ${misc:Depends},
          ${shlibs:Depends}
@@ -61,9 +61,11 @@ Description: powerful text editor
   * Symbol viewers for C, C++, and Python
   * XML completion and validation
 
-Package: kate-data
+Package: kate5-data
 Architecture: all
 Depends: ${misc:Depends}
+Replaces: kate-data (<< 4.14.3-0ubuntu4)
+Breaks: kate-data (<< 4.14.3-0ubuntu4)
 Description: shared data files for Kate text editor
  This package contains the architecture-independent shared data files needed
  for Kate editor
