--- a/debian/control
+++ b/debian/control
@@ -22,8 +22,8 @@ Build-Depends: cmake,
 Standards-Version: 3.9.6
 XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-applications/kate.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/kate.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-sc/kate.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kate.git
 
 Package: katepart
 Architecture: any
