Re disable pate

--- a/debian/control
+++ b/debian/control
@@ -10,15 +10,11 @@ Build-Depends: cmake,
                kde-sc-dev-latest (>= 4:4.12),
                kdelibs5-dev (>= 4:4.14.2),
                libkactivities-dev,
-               libpython2.7-dev,
                libqjson-dev,
                libqt4-opengl-dev,
                libqtwebkit-dev,
                pkg-config,
-               pkg-kde-tools (>= 0.12),
-               python-kde4-dev (>= 4:4.9.80),
-               python-qt4-dev,
-               python-sip-dev
+               pkg-kde-tools (>= 0.12)
 Standards-Version: 3.9.6
 XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
