--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
 include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
 
 override_dh_auto_configure:
-	$(overridden_command) -- -DPYTHON_LIBRARY=/usr/lib/$(DEB_HOST_MULTIARCH)/libpython2.7.so.1
+	$(overridden_command) -- -DKDE4_BUILD_TESTS=false
 
 override_dh_auto_test:
 	# Disable dh_auto_test at build time
