new bdep on kcrash

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: cmake,
                kio-dev,
                libgit2-dev,
                libkf5config-dev,
+               libkf5crash-dev,
                libkf5dbusaddons-dev,
                libkf5guiaddons-dev,
                libkf5i18n-dev,
