--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Build-Depends: cmake (>= 2.8.12),
 Standards-Version: 3.9.6
 XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/applications/kate.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/applications/kate.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/applications/kate.git
 
 Package: kate
