--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Build-Depends: cmake (>= 2.8.12),
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                plasma-framework-dev,
                qtbase5-dev (>= 5.2.0),
-               qtscript5-dev
+               qtscript5-dev (>= 5.2.0~)
 Standards-Version: 3.9.6
 XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
