add new bdep on kactivities

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: cmake,
                kinit-dev,
                kio-dev,
                libgit2-dev,
+               libkf5activities-dev,
                libkf5config-dev,
                libkf5crash-dev,
                libkf5dbusaddons-dev,
