--- a/debian/control
+++ b/debian/control
@@ -8,25 +8,26 @@ Uploaders: Modestas Vainius <modax@debian.org>,
 Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.3.0~),
-               kdoctools-dev,
-               kinit-dev,
-               kio-dev,
+               kdoctools-dev (>= 5.6.0~),
+               kinit-dev (>= 5.6.0~),
+               kio-dev (>= 5.6.0~),
                libgit2-dev,
-               libkf5config-dev,
+               libkf5config-dev (>= 5.6.0~),
                libkf5dbusaddons-dev,
-               libkf5guiaddons-dev,
-               libkf5i18n-dev,
+               libkf5guiaddons-dev (>= 5.6.0~),
+               libkf5i18n-dev (>= 5.6.0~),
+               libkf5iconthemes-dev (>= 5.6.0~),
                libkf5itemmodels-dev,
-               libkf5jobwidgets-dev,
+               libkf5jobwidgets-dev (>= 5.6.0~),
                libkf5newstuff-dev,
                libkf5notifications-dev,
-               libkf5parts-dev,
+               libkf5parts-dev (>= 5.6.0~),
                libkf5service-dev,
-               libkf5texteditor-dev,
+               libkf5texteditor-dev (>= 5.6.0~),
                libkf5threadweaver-dev,
                libkf5wallet-dev,
-               libkf5windowsystem-dev,
-               libkf5xmlgui-dev,
+               libkf5windowsystem-dev (>= 5.6.0~),
+               libkf5xmlgui-dev (>= 5.6.0~),
                pkg-config,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                plasma-framework-dev,
