--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Build-Depends: cmake,
 Standards-Version: 3.9.6
 XS-Testsuite: autopkgtest
 Homepage: http://kate-editor.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-applications/kate.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-applications/kate.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/kate.git
 
 Package: kate
