--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,9 @@ Build-Depends: cmake (>= 2.8.12),
                kinit-dev (>= 5.6.0~),
                kio-dev (>= 5.6.0~),
                libgit2-dev,
+               libkf5activities-dev (>= 5.6.0~),
                libkf5config-dev (>= 5.6.0~),
-               libkf5crash-dev,
+               libkf5crash-dev (>= 5.6.0~),
                libkf5dbusaddons-dev,
                libkf5guiaddons-dev (>= 5.6.0~),
                libkf5i18n-dev (>= 5.6.0~),
