--- a/debian/control
+++ b/debian/control
@@ -44,6 +44,7 @@ Package: kate
 Section: editors
 Architecture: any
 Depends: kate5-data (>= ${source:Version}),
+         katepart,
          ktexteditor-katepart,
          plasma-framework,
          qml-module-org-kde-kquickcontrolsaddons,
