--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,4 +1,4 @@
 Tests: testsuite
 Depends: @, @builddeps@, build-essential,
-         xvfb, xauth, dbus-x11
-Restrictions: rw-build-tree
+         xvfb, xauth, dbus-x11, xserver-xephyr
+Restrictions: build-needed
