--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,4 +1,4 @@
 Tests: testsuite
 Depends: @, @builddeps@, build-essential,
-         xvfb, xauth, dbus-x11, kinit
+         xvfb, xauth, dbus, kinit
 Restrictions: build-needed
