add transitional for ktexteditorpreviewplugin and break/replace it

--- a/debian/control
+++ b/debian/control
@@ -52,6 +52,8 @@ Depends: kate5-data (>= ${source:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
 Suggests: aspell | ispell | hspell, khelpcenter, konsole-kpart
+Breaks: ktexteditorpreviewplugin (<< ${source:Version}~ciBuild)
+Replaces: ktexteditorpreviewplugin (<< ${source:Version}~ciBuild)
 Description: powerful text editor
  Kate is a powerful text editor that can open multiple files simultaneously.
  .
@@ -84,3 +86,9 @@ Description: simple text editor
  KWrite is a simple text editor built on the KDE Platform. It uses the Kate
  editor component, so it supports powerful features such as flexible syntax
  highlighting, automatic indentation, and numerous other text tools.
+
+Package: ktexteditorpreviewplugin
+Section: oldlibs
+Architecture: all
+Description: transitional
+ Transitional package, can be safely removed.
