--- a/debian/control
+++ b/debian/control
@@ -8,14 +8,13 @@ Uploaders: Modestas Vainius <modax@debian.org>,
 Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.3.0~),
-               kdoctools-dev (>= 5.10.0~),
                kinit-dev (>= 5.6.0~),
-               kio-dev (>= 5.10.0~),
                libgit2-dev,
                libkf5activities-dev (>= 5.13.0~),
                libkf5config-dev (>= 5.13.0~),
                libkf5crash-dev (>= 5.13.0~),
                libkf5dbusaddons-dev,
+               libkf5doctools-dev (>= 5.10.0~),
                libkf5guiaddons-dev (>= 5.6.0~),
                libkf5i18n-dev (>= 5.13.0~),
                libkf5iconthemes-dev (>= 5.13.0~),
