B-D change: plasma-framework-dev -> libkf5plasma-dev

--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Build-Depends: cmake (>= 2.8.12),
                libkf5kio-dev (>= 5.13.0~),
                libkf5newstuff-dev,
                libkf5parts-dev (>= 5.13.0~),
+               libkf5plasma-dev,
                libkf5texteditor-dev (>= 5.13.0~),
                libkf5threadweaver-dev,
                libkf5wallet-dev,
@@ -30,7 +31,6 @@ Build-Depends: cmake (>= 2.8.12),
                libkf5xmlgui-dev (>= 5.13.0~),
                pkg-config,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
-               plasma-framework-dev,
                qtbase5-dev (>= 5.4.0~),
                qtscript5-dev (>= 5.4.0~),
 Standards-Version: 4.1.2
