move kate docs to kate5-data

--- a/debian/control
+++ b/debian/control
@@ -71,8 +71,8 @@ Description: powerful text editor
 Package: kate5-data
 Architecture: all
 Depends: ${misc:Depends}
-Replaces: kate-data (<< 4:4.14.3-0ubuntu4), ${kde-l10n:all}
-Breaks: kate-data (<< 4:4.14.3-0ubuntu4), ${kde-l10n:all}
+Replaces: kate (<< 4:17.08.3-3~), kate-data (<< 4:4.14.3-0ubuntu4), ${kde-l10n:all}
+Breaks: kate (<< 4:17.08.3-3~), kate-data (<< 4:4.14.3-0ubuntu4), ${kde-l10n:all}
 Description: shared data files for Kate text editor
  This package contains the architecture-independent shared data files needed
  for Kate editor
