--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,6 @@ Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.3.0~),
                kinit-dev (>= 5.6.0~),
-               libgit2-dev,
                libkf5activities-dev (>= 5.13.0~),
                libkf5config-dev (>= 5.13.0~),
                libkf5crash-dev (>= 5.13.0~),
@@ -50,7 +49,7 @@ Depends: kate5-data (>= ${source:Version}),
          ${misc:Depends},
          ${shlibs:Depends},
 Recommends: sonnet-plugins
-Suggests: khelpcenter, konsole-kpart
+Suggests: khelpcenter, konsole-kpart, git
 Description: powerful text editor
  Kate is a powerful text editor that can open multiple files simultaneously.
  .
